@@ -2161,3 +2161,6 @@ Version 5.2
 
 Created psketch program to apply non-photorealistic rendering to selected
 objects, identified by modifier name(s).
+
+Added '*' and '/' operations to rmtxop for element-wise multiplication and
+division of same-sized matrices.
